--- a/src/app/callings/callings.component.html
+++ b/src/app/callings/callings.component.html
@@ -1,16 +1,30 @@
+<button mat-icon-button mat-mini-fab class="filter-callings" matTooltip="Filter callings" matTooltipPosition="left" (click)="showFilterDialog()">
+  <mat-icon>filter_list</mat-icon>
+</button>
+
 <mat-list class="callings-list">
-  <ng-container *ngFor="let org of orgs | async">
+  <ng-container *ngFor="let org of orgs">
     <h2 matSubheader class="org-header">
       {{org.name}}
+
       <button mat-icon-button (click)="addOrgCalling(org)" matTooltip="Add calling" matTooltipPosition="right">
         <mat-icon>add</mat-icon>
       </button>
+
+      <!--<button mat-icon-button (click)="toggleReorder(org)" matTooltip="Reorder callings" matTooltipPosition="right">-->
+        <!--<mat-icon>reorder</mat-icon>-->
+      <!--</button>-->
     </h2>
 
     <mat-divider></mat-divider>
+
     <mat-list-item *ngFor="let calling of org.callings">
+
       <mat-progress-bar mode="indeterminate" *ngIf="calling.loading"></mat-progress-bar>
+
       <div matLine class="member-info {{calling.status ? calling.status.id : ''}}" *ngIf="!calling.loading">
+        <mat-icon matListIcon class="reorder-icon" *ngIf="org.reordering">reorder</mat-icon>
+
         <div class="member-calling">{{calling.name}}</div>
 
         <button mat-icon-button (click)="removeMember(calling, org)" matTooltip="Remove member from calling" matTooltipPosition="left" *ngIf="calling.member">
@@ -37,16 +51,6 @@
           {{calling.status ? calling.status.label : 'status'}}
         </button>
       </div>
-
-
-      <!--<button mat-icon-button [matMenuTriggerFor]="callingMenu">-->
-        <!--<mat-icon>more_vert</mat-icon>-->
-      <!--</button>-->
-
-      <!--<mat-menu #callingMenu="matMenu">-->
-        <!--<button mat-menu-item (click)="findMember()">Change Member</button>-->
-        <!--<button mat-menu-item (click)="updateOrgCalling()">{{calling.status ? 'Change' : 'Add'}} Status</button>-->
-      <!--</mat-menu>-->
     </mat-list-item>
   </ng-container>
 </mat-list>
